<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.retrofit.mobile.fragment.PersonalAreaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shadow_white_background"
            android:elevation="@dimen/dp_20"
            android:translationZ="@dimen/dp_10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/img_anketa_seller_persons"
                    android:src="@drawable/ic_person_white_24dp"
                    android:background="@drawable/rounded_image"
                    android:layout_marginLeft="14dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_personal_area"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="Имя/"
                    android:layout_marginTop="11dp"
                    android:layout_alignTop="@+id/img_anketa_seller_persons"
                    android:layout_toRightOf="@+id/img_anketa_seller_persons"
                    android:layout_toEndOf="@+id/img_anketa_seller_persons"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/anketa_personal_area_id"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="ID: 2017"
                    android:layout_marginBottom="18dp"
                    android:layout_alignBottom="@+id/img_anketa_seller_persons"
                    android:layout_alignLeft="@+id/name_personal_area"
                    android:layout_alignStart="@+id/name_personal_area"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_30"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Телефон"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_personal_area"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Доп.телефон"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/addphone_personal_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_30"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_area_email"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/email_personal_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_area_city"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/city_personal_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_30"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_area_address"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/address_personal_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_my_area_buyer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_white"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_30"
                android:text="@string/bayer_personal_area"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btn_my_area_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_white"
                android:layout_marginRight="@dimen/dp_30"
                android:text="@string/saller_personal_area"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>



</ScrollView>
